Fix display of long announcement titles on mobile (closes #66)

--- a/intranet/static/css/dashboard.css
+++ b/intranet/static/css/dashboard.css
@@ -34,7 +34,6 @@
     font-size: 15px;
     font-weight: bold;
     margin-bottom: 2px;
-    height: 20px;
 }
 
 .announcements-icon-wrapper {
